# soroban_stale_dep

./: Cargo.toml  Makefile
contracts/first/: Cargo.toml
contracts/first/src/: contract.rs  lib.rs  test.rs
contracts/second/: Cargo.toml
contracts/second/src/: contract.rs  lib.rs  test.rs
