[workspace]
resolver = "2"
members = [
    "contracts/*",
]

[workspace.package]
version = "0.0.0"

[workspace.dependencies]
soroban-sdk = { version = "20.3.1" }
soroban-token-sdk = { version = "20.3.1" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true